--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 
-<body></body>
+<body>
+    <section>
+        <h1>I'm Jyogita</h1>
+    </section>
+</body>
 
 </html>
